--- a/WebAP_Net lập lại từ đầu/WebBanHang/WebBanHang/WebBanHang(Lam lai).csproj
+++ b/WebAP_Net lập lại từ đầu/WebBanHang/WebBanHang/WebBanHang(Lam lai).csproj
@@ -102,6 +102,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="css\Category.css" />
+    <Content Include="css\CategoryUpdate.css" />
     <Content Include="Global.asax" />
     <Content Include="Web.config" />
   </ItemGroup>
@@ -119,6 +120,7 @@
     <None Include="packages.config" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Home\ThemDanhMuc.cshtml" />
+    <Content Include="Views\Home\CapNhatDanhMuc.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
