--- a/WebAPNet truyền nhiều tham số/WebBanHang/WebBanHang(Lam lai).csproj
+++ b/WebAPNet truyền nhiều tham số/WebBanHang/WebBanHang(Lam lai).csproj
@@ -112,6 +112,7 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ThanhVienController.cs" />
+    <Compile Include="Controllers\VaiTroTVController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -124,6 +125,7 @@
     <Content Include="Views\Home\ThemDanhMuc.cshtml" />
     <Content Include="Views\Home\CapNhatDanhMucMoi.cshtml" />
     <Content Include="Views\ThanhVien\Index.cshtml" />
+    <Content Include="Views\VaiTroTV\Index.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
